# fdri-cookiecutter-templates

./: LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/actions/check-release-ready/: action.yml
.github/workflows/: docs.yml  pipeline.yml  pr-checks.yml  release.yml
CHANGELOG/: 1.0.0.md  1.0.1.md  1.1.0.md  1.2.0.md
_shared/hooks/: hook_utils.py
_shared/{{cookiecutter.package_name}}/: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE.MIT  pyproject.toml
_shared/{{cookiecutter.package_name}}/.github/actions/check-release-ready/: action.yml
_shared/{{cookiecutter.package_name}}/CHANGELOG/: {{ cookiecutter.first_version }}.md
_shared/{{cookiecutter.package_name}}/docs/: Makefile
_shared/{{cookiecutter.package_name}}/docs/source/: api.rst  conf.py  index.rst  installation.rst
_shared/{{cookiecutter.package_name}}/docs/source/_static/css/: custom.css
_shared/{{cookiecutter.package_name}}/docs/source/_templates/autosummary/: attribute.rst  method.rst  property.rst
_shared/{{cookiecutter.package_name}}/docs/source/_templates/partials/: nav-socials.html
_shared/{{cookiecutter.package_name}}/scripts/: bump.py
_shared/{{cookiecutter.package_name}}/src/{{cookiecutter.import_name}}/: __init__.py  __main__.py
docs/: after-generation.md  design_decisions.md  index.md  prerequisites.md
docs/pypackage/: git-flows.md  releasing.md  troubleshooting.md  usage-codeberg.md  usage-github.md  usage.md
docs/pyservice/: git-flows.md  releasing.md  usage-github.md  usage.md
pypackage/: cookiecutter.json
pypackage/hooks/: post_gen_project.py  pre_gen_project.py
pypackage/{{cookiecutter.package_name}}/: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml
pypackage/{{cookiecutter.package_name}}/.github/: pull_request_template.md
pypackage/{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
pypackage/{{cookiecutter.package_name}}/.github/actions/check-release-ready/: action.yml
pypackage/{{cookiecutter.package_name}}/.github/workflows/: pipeline.yml  pr-checks.yml  publish.yml  release.yml
pypackage/{{cookiecutter.package_name}}/docs/: Makefile
pypackage/{{cookiecutter.package_name}}/docs/source/: api.rst  conf.py  index.rst  installation.rst
pypackage/{{cookiecutter.package_name}}/docs/source/_templates/autosummary/: attribute.rst  method.rst  property.rst
pypackage/{{cookiecutter.package_name}}/scripts/: bump.py  release.py
pypackage/{{cookiecutter.package_name}}/src/{{cookiecutter.import_name}}/: __init__.py  __main__.py
pypackage/{{cookiecutter.package_name}}/tests/{{cookiecutter.import_name}}/: test_{{cookiecutter.import_name}}.py
pyservice/: cookiecutter.json
pyservice/hooks/: post_gen_project.py  pre_gen_project.py
pyservice/{{cookiecutter.package_name}}/: CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE.GPL  LICENSE.MIT  Makefile  README.md
pyservice/{{cookiecutter.package_name}}/.githooks/: pre-commit  pre-push
pyservice/{{cookiecutter.package_name}}/.github/: dependabot.yml
pyservice/{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: feature_request.yml
pyservice/{{cookiecutter.package_name}}/.github/workflows/: pipeline.yml  pr-checks.yml  release.yml
pyservice/{{cookiecutter.package_name}}/CHANGELOG/: {{ cookiecutter.first_version }}.md
pyservice/{{cookiecutter.package_name}}/docs/: index.md  versioning_and_releases.md
pyservice/{{cookiecutter.package_name}}/docs/source/_static/css/: custom.css
pyservice/{{cookiecutter.package_name}}/docs/source/_templates/partials/: nav-socials.html
pyservice/{{cookiecutter.package_name}}/scripts/: release.py
scripts/: bump.py  release.py  sync_symlinks.py
tests/: conftest.py  test_bake_project.py  test_bake_pyservice.py  test_cli.py  test_readme_author.py  test_shared_symlinks.py  test_stamp_year.py
